--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                             </div>
 
                             <div class="fw-default-row">- Security & Vulnerability Assessment Service for Home & Offices (Severity check : Low to High)</div>
-                            <div class="fw-default-row">- Ethical Hacking (includes social engineering skills).</div>
+                            <div class="fw-default-row">- System Security check-up (FREE, Paid for further advance testing).</div>
                             <div class="fw-default-row">- Industry Ready Training (C++ | Python | Practical Ethical Hacking | Web and API Penetration Testing |)</div>
                           </div>
                         </div>
