--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@
 
                           <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/portfolio/2.jpg" alt="Speaker" title="" />
+                              <img src="img/portfolio/2.jpg" alt="Speaker" title="Presentation" />
                               <a href="https://speakerdeck.com/chenzhen/talk-at-gravithon2021" class="lightbox mfp-iframe"></a>
                             </div>
 
@@ -877,7 +877,7 @@
 
                           <figure class="item lbvideo" data-groups='["category_all", "category_detailed"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/portfolio/7.jpg" alt="Speaker" title="" />
+                              <img src="img/portfolio/7.jpg" alt="Speaker" title="Podcast" />
                               <a href="https://open.spotify.com/episode/4qMidRja4chg5HolNfwp9J?si=Dr6DWB1dT0ClNvdjosHrFQ&nd=1" class="lightbox mfp-iframe" title="Podcast"></a>
                             </div>
 
@@ -899,7 +899,7 @@
 
                           <figure class="item lbvideo" data-groups='["category_all", "category_mockups"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/portfolio/3.jpg" alt="Speaker" title="" />
+                              <img src="img/portfolio/3.jpg" alt="Speaker" title="Project" />
                               <a href="github-link" class="lightbox mfp-iframe" title="Project"></a>
                             </div>
 
@@ -910,7 +910,7 @@
 
                           <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/portfolio/4.jpg" alt="Speaker" title="" />
+                              <img src="img/portfolio/4.jpg" alt="Speaker" title="Presentation" />
                               <a href="https://speakerdeck.com/chenzhen/the-future-of-bug-bounty-hunting-at-bsides-noida" class="lightbox mfp-iframe"></a>
                             </div>
 
@@ -921,7 +921,7 @@
 
                           <figure class="item lbimage" data-groups='["category_all", "category_mockups"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/portfolio/5.jpg" alt="Mockup Design 1" title="" />
+                              <img src="img/portfolio/5.jpg" alt="Mockup Design 1" title="Project" />
                               <a class="lightbox" title="Mockup Design 1" class="lightbox mfp-iframe" href="img/portfolio/full/5.jpg"></a>
                             </div>
 
@@ -933,7 +933,7 @@
                           <figure class="item lbvideo" data-groups='["category_all", "category_detailed"]'>
                             <div class="portfolio-item-img">
                               <img src="img/portfolio/6.jpg" alt="YouTube Video 1" title="" />
-                              <a href="https://www.grimm-co.com/grimmcon-0x3-speakers" class="lightbox mfp-iframe" title="Speaker List"></a>
+                              <a href="https://www.grimm-co.com/grimmcon-0x3-speakers" class="lightbox mfp-iframe" title="Presentations"></a>
                             </div>
 
                             <i class="fas fa-video"></i>
