--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                           <h2>Fardeen Ahmed</h2>
                           <div class="owl-carousel text-rotation">                                    
                             <div class="item">
-                              <div class="sp-subtitle">Ethical Hacker, Pentester, Bug-Bounty Hunter, Hobbyist Coder</div>
+                              <div class="sp-subtitle">Ethical Hacker, Pentester, Bug-Bounty Hunter, Programmer</div>
                             </div>
                             
                             <div class="item">
@@ -159,7 +159,7 @@
                   <!-- Personal Information -->
                   <div class="row">
                     <div class="col-xs-12 col-sm-7">
-                      <p>I am Fardeen Ahmed. An Ethical Hacker,Security Analyst, Network and System Pentester, Cyber-Crime Investigator, and a Programmer. Currently i am pursuing B.Tech in Computer Science, with Specialization in CyberSecurity and Digital Forensics. I have a background of cybresecurity from a very young age. I have contributed in securing websites like Canva, Mastercard, (ISC2), Seek and many more. Also secured some governemnt domains such as CISF and main domain of NCIIPC. In my free time I code in C++, Python and Javascript and lay stress on problem solving approach. I also do train people in fields of Security testing and Programming.<br><br> Follow me up on my social media to know more about my work and get connected. Any help, mail me directly. Thank you for the visit here!!!</p>
+                      <p>I am Fardeen Ahmed. An Ethical Hacker, Pentester, Cyber-Crime Investigator, and a Programmer. Currently i am pursuing B.Tech in Computer Science, with Specialization in CyberSecurity and Digital Forensics. I have a background of cybresecurity from a very young age. I have contributed in securing websites like Canva, Mastercard, (ISC2), Seek and many more. Also secured some governemnt domains such as CISF and main domain of NCIIPC. In my free time I code in C++, Python and Javascript and lay stress on problem solving approach. I also do train people in fields of Security testing and Programming.<br><br> Follow me up on my social media to know more about my work and get connected. Any help, mail me directly. Thank you for the visit here!!!</p>
                     </div>
 
                     <div class="col-xs-12 col-sm-5">
@@ -177,12 +177,12 @@
 
                           <li>
                             <span class="title">Expertise</span>
-                            <span class="value">Red-Teaming, Ethical Hacking, Penetration Testing (System, Networks, Websites & Web-Applications) & Coding</span>
+                            <span class="value">Red-Teaming, Ethical Hacking, Penetration Testing (System, Networks, Websites & Web-Applications), Programming</span>
                           </li>
 
                           <li>
                             <span class="title">Interested Fields</span>
-                            <span class="value">Ethical Hacking, Web-Application and API Penetration Testing, Programming, Digital Forensics and CTF</span>
+                            <span class="value">Ethical Hacking, Web-Application and API Penetration Testing, Product and Open-Source Programming, Digital Forensics.</span>
                           </li>
                         </ul>
                       </div>
@@ -460,8 +460,8 @@
                               <a href="mailto:iamhereforyourqueries@gmail.com" target="_self" class="btn btn-secondary">Hire Me</a>
                             </div>
 
-                            <div class="fw-default-row">- Security & Vulnerability Assessment Service for Home & Offices (Severity check : Low to High)</div>
-                            <div class="fw-default-row">- System Security check-up (FREE, Paid for further advance testing).</div>
+                            <div class="fw-default-row">- Vulnerability Assessment and Penetration Testing</div>
+                            <div class="fw-default-row">- Network and System Auditing</div>
                             <div class="fw-default-row">- Industry Ready Training (C++ | Python | Practical Ethical Hacking | Web and API Penetration Testing |)</div>
                           </div>
                         </div>
@@ -481,9 +481,9 @@
                               <a href="mailto:iamhereforyourqueries@gmail.com" target="_self" class="btn btn-primary">Hire Me</a>
                             </div>
                             
-                            <div class="fw-default-row">- Offensive Security Testing of Website, Webportal and Infrastructure.</div>
-                            <div class="fw-default-row">- Programming for Purpose & Freelance Work (Website Development, Software Product Design and Development etc)</div>
-                            <div class="fw-default-row">- Soft Products Testing for Security Purposes, Ethical Help on Social Media instances</div>
+                            <div class="fw-default-row">- Offensive Security Testing</div>
+                            <div class="fw-default-row">- Product Programming and Desigining(Freelance and Contract Basis)</div>
+                            <div class="fw-default-row">- Security Consultant for Social Media Influencers and Marketeer</div>
                           </div>
                         </div>
 
