--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
                         <li>Ethical Hacking</li>
                         <li>Penetration Testing</li>
                         <li>Security Research</li>
-                        <li>Bug-Hunter</li>
+                        <li>C++</li>
                         <li>Incident Response</li>
                         <li>Problem solving</li>
                         <li>Python</li>
@@ -884,6 +884,17 @@
                             <i class="far fa-file-alt"></i>
                             <h4 class="name">Interview with Hackersarena0</h4>
                             <span class="category">Podcast</span>
+                          </figure>
+                          
+                          <figure class="item lbvideo" data-groups='["category_all", "category_detailed"]'>
+                            <div class="portfolio-item-img">
+                              <img src="img/portfolio/8.jpg" alt="Speaker" title="Youtube" />
+                              <a href="https://www.youtube.com/watch?v=L5xXHmfMbGI" class="lightbox mfp-iframe" title="Youtube"></a>
+                            </div>
+
+                            <i class="far fa-file-alt"></i>
+                            <h4 class="name">Interview with Cyberkilla</h4>
+                            <span class="category">Youtube</span>
                           </figure>
 
                           <figure class="item lbvideo" data-groups='["category_all", "category_mockups"]'>
