--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>Fardeen Ahmed | Programmer | Ethical Hacker</title>
+    <title>Fardeen Ahmed | Security Hacker | Programmer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="Fardeen-Ahmed" />
     <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
@@ -47,7 +47,7 @@
               </div>
               <div class="header-titles">
                 <h2>Fardeen Ahmed</h2>
-                <h4>Security Analyst, Researcher & Hobbyist Coder</h4>
+                <h4>Security Analyst, Researcher, Programmer</h4>
               </div>
             </div>
 
@@ -134,11 +134,11 @@
                           <h2>Fardeen Ahmed</h2>
                           <div class="owl-carousel text-rotation">                                    
                             <div class="item">
-                              <div class="sp-subtitle">Ethical Hacker, Pentester, Bug-Bounty Hunter, Programmer</div>
+                              <div class="sp-subtitle">Security Researcher, Pentester, Programmer</div>
                             </div>
                             
                             <div class="item">
-                              <div class="sp-subtitle">Article & Blog Writer, Digital Content Creator, Learner</div>
+                              <div class="sp-subtitle"></div>
                             </div>
                           </div>
                         </div>
@@ -159,7 +159,7 @@
                   <!-- Personal Information -->
                   <div class="row">
                     <div class="col-xs-12 col-sm-7">
-                      <p>I am Fardeen Ahmed. An Ethical Hacker, Pentester, Cyber-Crime Investigator, and a Programmer. Currently i am pursuing B.Tech in Computer Science, with Specialization in CyberSecurity and Digital Forensics. I have a background of cybresecurity from a very young age. I have contributed in securing websites like Canva, Mastercard, (ISC2), Seek and many more. Also secured some governemnt domains such as CISF and main domain of NCIIPC. In my free time I code in C++, Python and Javascript and lay stress on problem solving approach. I also do train people in fields of Security testing and Programming.<br><br> Follow me up on my social media to know more about my work and get connected. Any help, mail me directly. Thank you for the visit here!!!</p>
+                      <p>I am Fardeen Ahmed. A Security Researcher, Pentester, Cyber-Crime Investigator, and a Programmer. Currently i am pursuing B.Tech in Computer Science, with Specialization in CyberSecurity and Digital Forensics. I have a background of cybresecurity from a very young age. I have contributed in securing websites like Canva, Mastercard, (ISC2), Seek and many more. Also secured some governemnt domains such as CISF and main domain of NCIIPC. In my free time I code in C++, Python and Javascript and lay stress on problem solving approach. I also do train people in fields of Security testing and Programming.<br><br> Follow me up on my social media to know more about my work and get connected. Any help, mail me directly. Thank you for the visit here!!!</p>
                     </div>
 
                     <div class="col-xs-12 col-sm-5">
@@ -167,7 +167,7 @@
                         <ul>
                           <li>
                             <span class="title">Qualification</span>
-                            <span class="value">Ethical Hacker, Pen-tester, Programmer</span>
+                            <span class="value">CEH, ICSI Network Specialist, TCM Certified PEH</span>
                           </li>
 
                           <li>
@@ -177,12 +177,12 @@
 
                           <li>
                             <span class="title">Expertise</span>
-                            <span class="value">Red-Teaming, Ethical Hacking, Penetration Testing (System, Networks, Websites & Web-Applications), Programming</span>
+                            <span class="value">Red-Teaming, Penetration Testing (System, Networks, Websites & Web-Applications), Programming</span>
                           </li>
 
                           <li>
                             <span class="title">Interested Fields</span>
-                            <span class="value">Ethical Hacking, Web-Application and API Penetration Testing, Product and Open-Source Programming, Digital Forensics.</span>
+                            <span class="value">Security Research, Websites, Web-Application and API Penetration Testing, Product and Open-Source Programming, Digital Forensics, IT Security</span>
                           </li>
                         </ul>
                       </div>
