--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>Fardeen Ahmed | Security Hacker | Programmer</title>
+    <title>Fardeen Ahmed | Security Hacker </title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="Fardeen-Ahmed" />
     <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
@@ -47,7 +47,7 @@
               </div>
               <div class="header-titles">
                 <h2>Fardeen Ahmed</h2>
-                <h4>Security Analyst, Researcher, Programmer</h4>
+                <h4>Security Engineer and Researcher</h4>
               </div>
             </div>
 
