--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
                           <h2>Fardeen Ahmed</h2>
                           <div class="owl-carousel text-rotation">                                    
                             <div class="item">
-                              <div class="sp-subtitle">Security Researcher, Pentester, Programmer</div>
+                              <div class="sp-subtitle">Security Researcher, Penetration Tester, Red-Team Associate, Bug-Bounty Hunter</div>
                             </div>
                             
                             <div class="item">
-                              <div class="sp-subtitle"></div>
+                              <div class="sp-subtitle">Programmer, Trainer, Learner</div>
                             </div>
                           </div>
                         </div>
