--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               </div>
               <div class="header-titles">
                 <h2>Fardeen Ahmed</h2>
-                <h4>Security Engineer and Researcher</h4>
+                <h4>System Architecture, Network and Security</h4>
               </div>
             </div>
 
@@ -101,7 +101,7 @@
             </div>
 
             <div class="header-buttons">
-              <a href="https://darksocietypenetration.com/courses/" target="_blank" class="btn btn-primary">Get Certified</a>
+              <a href="https://dsph.org/" target="_blank" class="btn btn-primary">Get Certified</a>
             </div>
 
             <div class="copyrights">© 2021 All rights reserved.</div>
