--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                           <h2>Fardeen Ahmed</h2>
                           <div class="owl-carousel text-rotation">                                    
                             <div class="item">
-                              <div class="sp-subtitle">Security Researcher, Penetration Tester, Red-Team Associate, Bug-Bounty Hunter</div>
+                              <div class="sp-subtitle">Security Researcher, Penetration Tester, Red-Team Associate</div>
                             </div>
                             
                             <div class="item">
