--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
               <!-- Blog Subpage -->
               <section data-id="blog" class="animated-section">
                 <div class="page-title">
-                  <h2>Blog</h2>
+                  <h2>Blogs and Articles</h2>
                 </div>
 
                 <div class="section-content">
