--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <ul>
                           <li>
                             <span class="title">Qualification</span>
-                            <span class="value">CEH, ICSI Network Specialist, TCM Certified PEH</span>
+                            <span class="value">CEH, ICSI Network Specialist, TCM-PEH, NCSA</span>
                           </li>
 
                           <li>
@@ -177,7 +177,7 @@
 
                           <li>
                             <span class="title">Expertise</span>
-                            <span class="value">Red-Teaming, Penetration Testing (System, Networks, Websites & Web-Applications), Programming</span>
+                            <span class="value">Red-Teaming, Penetration Testing (System, Networks, Websites & Web-Applications), Soft Product Programming</span>
                           </li>
 
                           <li>
