--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>Fardeen Ahmed | Security Researcher | Programmer </title>
+    <title>I'm F.A..!!!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="Fardeen-Ahmed" />
     <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
@@ -47,7 +47,7 @@
               </div>
               <div class="header-titles">
                 <h2>Fardeen Ahmed</h2>
-                <h4>System Architecture, Network and Security</h4>
+                <h4>Cybersecurity Researcher, Ethical Hacker and Programmer</h4>
               </div>
             </div>
 
@@ -95,7 +95,6 @@
                 <li><a href="https://www.linkedin.com/in/fardeen-ahmed-455997188/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                 <li><a href="https://twitter.com/fardeenahmed411" target="_blank"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="https://www.quora.com/profile/Fardeen-Ahmed-71" target="_blank"><i class="fab fa-quora"></i></a></li>
-                <li><a href="https://www.instagram.com/ahmedfardeen_/" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="https://fardeen-ahmed.medium.com/" target="_blank"><i class="fab fa-medium"></i></a></li>
               </ul>
             </div>
@@ -134,7 +133,7 @@
                           <h2>Fardeen Ahmed</h2>
                           <div class="owl-carousel text-rotation">                                    
                             <div class="item">
-                              <div class="sp-subtitle">Security Researcher, Penetration Tester, Red-Team Associate</div>
+                              <div class="sp-subtitle">Cybersecurity Researcher, Penetration Tester, Ethical Hacker</div>
                             </div>
                             
                             <div class="item">
@@ -159,7 +158,7 @@
                   <!-- Personal Information -->
                   <div class="row">
                     <div class="col-xs-12 col-sm-7">
-                      <p>I am Fardeen Ahmed. A Security Researcher, Pentester, Cyber-Crime Investigator, and a Programmer. Currently i am pursuing B.Tech in Computer Science, with Specialization in CyberSecurity and Digital Forensics. I have a background of cybresecurity from a very young age. I have contributed in securing websites like Canva, Mastercard, (ISC2), Seek and many more. Also secured some governemnt domains such as CISF and main domain of NCIIPC. In my free time I code in C++, Python and Javascript and lay stress on problem solving approach. I also do train people in fields of Security testing and Programming.<br><br> Follow me up on my social media to know more about my work and get connected. Any help, mail me directly. Thank you for the visit here!!!</p>
+                      <p>I am Fardeen Ahmed. A Cybersecurity Researcher, Pentester, Cyber-Crime Investigator, and a Programmer. Currently i am pursuing B.Tech in Computer Science, with Specialization in CyberSecurity and Digital Forensics. I have a background of cybresecurity from a very young age. I contributed in securing websites like Canva, Mastercard, (ISC2), Seek and many more. Also secured some governemnt domains such as CISF and main domain of NCIIPC. In my free time I code in Python, Javascript and lay stress on problem solving approach. I also do train people in fields of Security testing and Programming.<br><br> If you need any help, mail me directly. Thank you for the visit here!!!</p>
                     </div>
 
                     <div class="col-xs-12 col-sm-5">
@@ -182,7 +181,7 @@
 
                           <li>
                             <span class="title">Interested Fields</span>
-                            <span class="value">Security Research, Websites, Web-Application and API Penetration Testing, Product and Open-Source Programming, Digital Forensics, IT Security</span>
+                            <span class="value">Security Research, Websites, Web-Application, Android and API Penetration Testing, Soft product and Open-Source Programming, Digital Forensics, IT Security</span>
                           </li>
                         </ul>
                       </div>
@@ -211,7 +210,7 @@
                             </div>
                             <div class="ci-text">
                               <h4>Vulnerability Assessment and Pen-Testing</h4>
-                              <p>Offensive Penetration testing service includes Network and System Security testing, issues with Operating System , IT Support and Network. Following comes reporting that consists of audit done, mitigation regarding website / webportal, android application testing or any incident response on systems and network based vulnerability.</p>
+                              <p>Offensive Penetration testing service includes Network and System Security testing, testing issues with Operating System , IT Support and Network. The test do consists of reporting and auditing done, mitigation regarding website / webportal, android application testing or any incident response on systems and network based vulnerability.</p>
                             </div>
                           </div>
                           <div class="info-block-w-icon">
@@ -219,7 +218,7 @@
                               <i class="lnr lnr-laptop-phone"></i>
                             </div><div class="ci-text">
                               <h4>Programming</h4>
-                              <p>I code in my free time. By using codes, i create tools that can be used by other cybersecurity enthusiasts. I code in Python, C++, currently learning Javascript. Open-Source Coding, solving issues, creating add-ons and creating tools are fun to do</p>
+                              <p>I code in my free time. By my coding skills, i create tools that can be used by other cybersecurity enthusiasts. I code in Python, currently learning Javascript. Open-Source Coding, solving issues, creating add-ons and creating tools are fun to do</p>
                             </div>
                           </div>
                         </div>
@@ -242,8 +241,8 @@
                             <div class="ci-icon">
                               <i class="lnr lnr-flag"></i>
                             </div><div class="ci-text">
-                              <h4>Bug-Bounty Hunter</h4>
-                              <p>I hunt bugs in softwares in platform in free time, both as a skill and hobby, Most of my bugs comprise of Logical bugs, Critical Bugs and sometimes, hunting in bulk for low-hanging fruits. I ain't a complete geek, i do go outside and play soccer when we friends are together.</p>
+                              <h4>Ethical Hacker</h4>
+                              <p>I fins flaws in softwares in platform in free time, both as a skill and hobby, Most of my finsings comprise of Logical, Critical and sometimes, finding in bulk for low-hanging flaws. I ain't a complete geek, i do go outside and play soccer when we friends are together.</p>
                             </div>
                           </div>
                         </div>
