--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,7 @@
 
                       <div class="lm-info-block gray-default">
                         <i class="lnr lnr-phone-handset"></i>
-                        <h4><a href="https://darksocietypenetration.com/contact-us/">Get Connected</a></h4>
+                        <h4><a href="https://support.dsph.org/public/en/">Get Connected</a></h4>
                         <span class="lm-info-block-value"></span>
                         <span class="lm-info-block-text"></span>
                       </div>
