--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@
 
                       <div class="lm-info-block gray-default">
                         <i class="lnr lnr-envelope"></i>
-                        <h4><a href="https://darksocietypenetration.com/contact-us/">Tap for Virtual Meet</a></h4>
+                        <h4><a href="https://support.dsph.org/">Tap for Virtual Meet</a></h4>
                         <span class="lm-info-block-value"></span>
                         <span class="lm-info-block-text"></span>
                       </div>
