--- a/index.html
+++ b/index.html
@@ -1086,14 +1086,14 @@
 
                       <div class="lm-info-block gray-default">
                         <i class="lnr lnr-phone-handset"></i>
-                        <h4><a href="https://support.dsph.org/public/en/">Get Connected</a></h4>
+                        <h4><a href="https://support.dsph.org/">Get Connected</a></h4>
                         <span class="lm-info-block-value"></span>
                         <span class="lm-info-block-text"></span>
                       </div>
 
                       <div class="lm-info-block gray-default">
                         <i class="lnr lnr-envelope"></i>
-                        <h4><a href="https://support.dsph.org/">Tap for Virtual Meet</a></h4>
+                        <h4><a href="https://support.dsph.org/">Tap for Meet</a></h4>
                         <span class="lm-info-block-value"></span>
                         <span class="lm-info-block-text"></span>
                       </div>
