--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -43,7 +43,7 @@
           <header id="site_header" class="header mobile-menu-hide">
             <div class="header-content">
               <div class="header-photo">
-                <img src="img/main_photo.jpg" alt="Fardeen Ahmed">
+                <img src="img/main_pic.jpg" alt="Fardeen Ahmed">
               </div>
               <div class="header-titles">
                 <h2>Fardeen Ahmed</h2>
