--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                             </div>
                             
                             <div class="fw-button-row">
-                              <a href="mailto:iamhereforyourqueries@gmail.com" target="_self" class="btn btn-secondary">Hire Me</a>
+                              <a href="https://www.upwork.com/freelancers/~01e141fab0be7977be" target="_self" class="btn btn-secondary">Hire Me</a>
                             </div>
 
                             <div class="fw-default-row">- Vulnerability Assessment and Penetration Testing</div>
@@ -477,7 +477,7 @@
                             </div>
 
                             <div class="fw-button-row">
-                              <a href="mailto:iamhereforyourqueries@gmail.com" target="_self" class="btn btn-primary">Hire Me</a>
+                              <a href="https://www.upwork.com/freelancers/~01e141fab0be7977be" target="_self" class="btn btn-primary">Hire Me</a>
                             </div>
                             
                             <div class="fw-default-row">- Offensive Security Testing</div>
