--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
                               <i class="lnr lnr-store"></i>
                             </div>
                             <div class="ci-text">
-                              <h4>Vulnerability Assessment and Pen-Testing</h4>
-                              <p>Offensive Penetration testing service includes Network and System Security testing, testing issues with Operating System , IT Support and Network. The test do consists of reporting and auditing done, mitigation regarding website / webportal, android application testing or any incident response on systems and network based vulnerability.</p>
+                              <h4>Offenisve Penetration Testing Service</h4>
+                              <p>Offensive Penetration testing services includes Websites, Web-Application, API's and Android Application, Network, System and Soft-Product Security Testing.</p>
                             </div>
                           </div>
                           <div class="info-block-w-icon">
@@ -218,7 +218,7 @@
                               <i class="lnr lnr-laptop-phone"></i>
                             </div><div class="ci-text">
                               <h4>Programming</h4>
-                              <p>I code in my free time. By my coding skills, i create tools that can be used by other cybersecurity enthusiasts. I code in Python, currently learning Javascript. Open-Source Coding, solving issues, creating add-ons and creating tools are fun to do</p>
+                              <p>I code in my free time. i create tools that can be used by other cybersecurity enthusiasts. I code in Python, currently learning Javascript. Open-Source Coding, solving issues, creating add-ons and creating tools are fun to do</p>
                             </div>
                           </div>
                         </div>
@@ -242,7 +242,7 @@
                               <i class="lnr lnr-flag"></i>
                             </div><div class="ci-text">
                               <h4>Ethical Hacker</h4>
-                              <p>I fins flaws in softwares in platform in free time, both as a skill and hobby, Most of my finsings comprise of Logical, Critical and sometimes, finding in bulk for low-hanging flaws. I ain't a complete geek, i do go outside and play soccer when we friends are together.</p>
+                              <p>I find flaws in softwares on different RDP/VDP platforms in free time, both as a skill and hobby, Most of my findings comprise of Logical, Critical and sometimes, finding in bulk for low-hanging flaws. I ain't a complete geek, i do go outside and play soccer when we friends are together.</p>
                             </div>
                           </div>
                         </div>
@@ -287,7 +287,7 @@
                         <!-- Testimonial 2 -->
                         <div class="testimonial">
                           <div class="img">
-                            <img src="img/testimonials/testimonial-2.jpg" alt="Alex Smith">
+                            <img src="img/testimonials/testimonial-2.jpg" alt="Jibin Variyath">
                           </div>
                           <div class="text">
                             <p>Fardeen is a quick learner and very passionate in the field of Cyber Security. He has a great knowledge in this domain and mentors a lot of other enthusiasts. Like everyone, he started from ground zero and is a expertise now. Great going!</p>
@@ -306,7 +306,7 @@
                         <!-- Testimonial 3 -->
                         <div class="testimonial">
                           <div class="img">
-                            <img src="img/testimonials/testimonial-3.jpg" alt="">
+                            <img src="img/testimonials/testimonial-3.jpg" alt="Jaya Shah">
                           </div>
                           <div class="text">
                             <p>Gave him a work, and he outdid what I assumed. Indeed he is helpful and always ready to go type of a guy. Wish him all the best.!!!..</p>
@@ -480,8 +480,8 @@
                               <a href="https://www.upwork.com/freelancers/~01e141fab0be7977be" target="_self" class="btn btn-primary">Hire Me</a>
                             </div>
                             
-                            <div class="fw-default-row">- Offensive Security Testing</div>
-                            <div class="fw-default-row">- Product Programming and Desigining(Freelance and Contract)</div>
+                            <div class="fw-default-row">- Offensive Security Testing and Auditing</div>
+                            <div class="fw-default-row">- Product Programming and Desigining(Freelance and On-Contract)</div>
                             <div class="fw-default-row">- Security Consultant for Social Media Influencers and Marketeer</div>
                           </div>
                         </div>
@@ -746,10 +746,10 @@
                         <li>Ethical Hacking</li>
                         <li>Penetration Testing</li>
                         <li>Security Research</li>
-                        <li>C++</li>
+                        <li>Legal Writing</li>
                         <li>Incident Response</li>
                         <li>Problem solving</li>
-                        <li>Python</li>
+                        <li>Coding</li>
                         <li>Constant-learner</li>
                         <li>Flexibility</li>
                       </ul>
