--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                               <i class="lnr lnr-store"></i>
                             </div>
                             <div class="ci-text">
-                              <h4>Offenisve Penetration Testing Service</h4>
+                              <h4>Offensive Penetration Testing Service</h4>
                               <p>Offensive Penetration testing services includes Websites, Web-Application, API's and Android Application, Network, System and Soft-Product Security Testing.</p>
                             </div>
                           </div>
