--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                             <div class="ci-icon">
                               <i class="lnr lnr-laptop-phone"></i>
                             </div><div class="ci-text">
-                              <h4>Programming</h4>
+                              <h4>Product Programming</h4>
                               <p>I code in my free time. i create tools that can be used by other cybersecurity enthusiasts. I code in Python, currently learning Javascript. Open-Source Coding, solving issues, creating add-ons and creating tools are fun to do</p>
                             </div>
                           </div>
