--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
                           <figure class="item lbaudio" data-groups='["category_all", "category_detailed"]'>
                             <div class="portfolio-item-img">
                               <img src="img/portfolio/1.jpg" alt="Speaker" title="" />
-                              <a href="https://speakerdeck.com/chenzhen/thinking-like-a-bug-bounty-hunter" class="lightbox mfp-iframe" title="Presentation"></a>
+                              <a href="https://thecybergrabs.org/grabcon/" class="lightbox mfp-iframe" title="Presentation"></a>
                             </div>
 
                             <i class="fa fa-volume-up"></i>
@@ -866,7 +866,7 @@
                           <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
                             <div class="portfolio-item-img">
                               <img src="img/portfolio/2.jpg" alt="Speaker" title="Presentation" />
-                              <a href="https://speakerdeck.com/chenzhen/talk-at-gravithon2021" class="lightbox mfp-iframe"></a>
+                              <a href="https://gravithon.feelthegravity.in/" class="lightbox mfp-iframe"></a>
                             </div>
 
                             <i class="far fa-file-alt"></i>
@@ -921,7 +921,7 @@
                           <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
                             <div class="portfolio-item-img">
                               <img src="img/portfolio/4.jpg" alt="Speaker" title="Presentation" />
-                              <a href="https://speakerdeck.com/chenzhen/the-future-of-bug-bounty-hunting-at-bsides-noida" class="lightbox mfp-iframe"></a>
+                              <a href="https://bsidesnoida.in/" class="lightbox mfp-iframe"></a>
                             </div>
 
                             <i class="far fa-file-alt"></i>
