--- a/index.html
+++ b/index.html
@@ -422,8 +422,13 @@
                                 <img src="img/clients/client-14.png" alt="Logo">
                           </a>
                         </div>
-  
-                      </div>
+                        
+                        <div class="client-block">
+                              <a href="" target="_blank" title="Logo">
+                                <img src="img/clients/client-15.png" alt="Logo">
+                          </a>
+                        </div>
+                        </div>
                     </div>
                   </div>
                   <!-- End of Clients -->
