--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
                           <li>
                             <span class="title">Workplace</span>
-                            <span class="value"><a href="https://pikkc.com/">pikkc</a></span>
+                            <span class="value"><a href="https://pikkc.com/">Pikkc</a>,<a href="https://www.honeywell.com/us/en">Honeywell</a></span>
                           </li>
 
                           <li>
