--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             <div class="social-links">
               <ul>
                 <li><a href="https://www.linkedin.com/in/fardeen-ahmed-455997188/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="https://www.instagram.com/ahmedfardeen_/" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="https://twitter.com/fardeenahmed411" target="_blank"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="https://www.quora.com/profile/Fardeen-Ahmed-71" target="_blank"><i class="fab fa-quora"></i></a></li>
                 <li><a href="https://fardeen-ahmed.medium.com/" target="_blank"><i class="fab fa-medium"></i></a></li>
