--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <!-- Animated Background -->
     <div class="lm-animated-bg" style="background-image: url(img/main_bg.gif);"></div>
     <!-- /Animated Background -->
+    
+    <!-- Badge -->    
+     <script src="https://tryhackme.com/badge/387976"></script>
+    <!-- /Badge -->
 
     <!-- Loading animation -->
     <div class="preloader">
