--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
                           <li>
                             <span class="title">Interested Fields</span>
-                            <span class="value">Security Research, Websites, Web-Application, Android and API Penetration Testing, Soft product and Open-Source Programming, Digital Forensics, IT Security</span>
+                            <span class="value">Security Research, Pentest (Websites & Web-Applications, Android Application, APIs, Internal and External Network, Cloud, IOT, OT, social engineering), Soft product and Open-Source Programming, Digital Forensics, IT Security Practice and Adversary Simulation</span>
                           </li>
                         </ul>
                       </div>
