--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </div>
               <div class="header-titles">
                 <h2>Fardeen Ahmed</h2>
-                <h4>Programmer, Ethical Hacker, Trainer</h4>
+                <h4>Programmer & Ethical Hacker</h4>
               </div>
             </div>
 
