--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                             </div>
                             <div class="ci-text">
                               <h4>Offensive Penetration Testing Service</h4>
-                              <p>Offensive Penetration testing services includes Websites, Web-Application, API's and Android Application, Network, System and Soft-Product Security Testing.</p>
+                              <p>Offensive Penetration testing services includes Websites & Web-Applications, Android Application, APIs, Internal and External Network, Cloud, IOT, OT and Soft-Product Security Testing.</p>
                             </div>
                           </div>
                           <div class="info-block-w-icon">
@@ -222,7 +222,7 @@
                               <i class="lnr lnr-laptop-phone"></i>
                             </div><div class="ci-text">
                               <h4>Product Programming</h4>
-                              <p>I code in my free time. i create tools that can be used by other cybersecurity enthusiasts. I code in Python, currently learning Javascript. Open-Source Coding, solving issues, creating add-ons and creating tools are fun to do</p>
+                              <p>I code in my free time. i create tools that can be used by other cybersecurity enthusiasts. I code in Python, and contribute in Open-Source programming, solving issues, creating add-ons and creating tools are fun to do</p>
                             </div>
                           </div>
                         </div>
